@startuml rfc_state_machine
skinparam state {
  BackgroundColor White
  BorderColor #888780
  FontName sans-serif
  FontSize 13
}
skinparam shadowing false
skinparam ArrowColor #888780
skinparam ArrowFontSize 11
skinparam ArrowFontColor #888780

title Vision & Directive Driven RFC State Machine

[*] --> Draft :  🌱 Proposal — identifies need

state Draft {
  Draft : AI research & enhance\nSummary · Motivation · Design · Tradeoffs
}

state "Decision" as D1 <<choice>> : ✔️ Mature decision — advance
state "Decision" as D2 <<choice>> : ✔️ Mature decision — advance
state "Decision" as D3 <<choice>> : ✔️ Mature decision — advance
state "Decision" as D4 <<choice>> : ✔️ Mature decision — advance

state Review {
  Review : [GATE] AI feedback & debate\nDefine acceptance criteria
}

state Develop {
  Develop : AI design, build, test\nCode, tests, proven results
}

state Merge {
  Merge : [GATE] AI code review · e2e\nRegression, integration tests
}

state Complete {
  Complete : Release dependency resolved
}

' Local terminal stubs for discard/reject
state "🗑" as X1 <<end>>
state "🗑" as X2 <<end>>
state "🗑" as X3 <<end>>
state "🗑" as X4 <<end>>

' --- Draft → D1 ---
Draft -down-> D1 : mature
D1 -down->  Review : 🌿 advance
D1 -left->  Draft  : 🔄 revise/split
D1 -->      X1     : 🗑 discard

' --- Review → D2 ---
Review -down-> D2 : mature
D2 -down->  Develop :  🌳 advance
D2 -left->  Review   : 🔄 revise/split
D2 -->      X2      : 🗑 reject

' --- Develop → D3 ---
Develop -down-> D3 : mature
D3 -down->  Merge  : 𓀅 advance
D3 -left->  Develop : 🔄 revise/split
D3 -->      X3     : 🗑 reject

' --- Merge → D4 ---
Merge -down-> D4 : mature
D4 -down->  Complete : 🎉 merged
D4 -left->  Merge  : 🔄 revise/split
D4 -->      X4       : 🗑 reject

' --- Complete ---
Complete -down-> [*]

legend right
  **⚖**       Mature decision — advance
  **🔄**       Revise or split (one level up)
  **⏳**       Blocked — wait for dependency
  **🗑**        Discard / reject (local terminal)
  ---
  All states support:
  · Escalation to frontier model or human
  · Circuit breaker on runaway loop
  · All D* gating decisions need proposal decision records for auditability
  · All D* gating decisions need proposal decision records for auditability


endlegend

footer agentHive v2.5 Architecture
@enduml

